完成加入購物車後，購物車的 refresh ；渲染畫面 完成一半

--- a/css/all.css
+++ b/css/all.css
@@ -11952,6 +11952,11 @@ fieldset:disabled .btn {
   }
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .card-hover {
   position: relative;
   z-index: 999;
