--- a/style/all.scss
+++ b/style/all.scss
@@ -1,6 +1,12 @@
 @import "./venders/bootstrap/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
 .card-hover {
     position: relative;
 
