--- a/style/all.scss
+++ b/style/all.scss
@@ -1,8 +1,12 @@
 @import "./venders/bootstrap/bootstrap";
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
+a {
+    color: inherit;
+}
 
-img{
+img {
     max-width: 100%;
     height: auto;
 }
@@ -38,4 +42,20 @@ img{
         opacity: .5;
     }
 
+}
+
+.off-canvas-scrollbar {
+   
+    &::-webkit-scrollbar {
+        width:10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: red;
+        border-radius: 10px
+    }
+    &::-webkit-scrollbar-track{
+        background-color: white;
+      
+    }
 }
