--- a/style/venders/bootstrap/_utilities.scss
+++ b/style/venders/bootstrap/_utilities.scss
@@ -319,6 +319,15 @@ $utilities: map-merge(( // scss-docs-start utils-vertical-align
         normal: $font-weight-normal,
         bold: $font-weight-bold,
         bolder: $font-weight-bolder)),
+    "cursor-pointer":(
+      property:cursor,
+      class:cursor,
+      values:(
+        pointer:pointer,
+        not-allowed:not-allowed
+        
+      )
+    ),
     "line-height": (property: line-height,
       class: lh,
       values: (1: 1,
