解決購物車 template 的 bug、調整 index.html header 的版型

--- a/style/venders/bootstrap/_utilities.scss
+++ b/style/venders/bootstrap/_utilities.scss
@@ -67,7 +67,8 @@ $utilities: map-merge(( // scss-docs-start utils-vertical-align
         x: translateX(-50%),
         y: translateY(-50%),
       )),
-    // scss-docs-end utils-position
+    
+    // scss-docs-endutils-position
     // scss-docs-start utils-borders
     "border": (property: border,
       values: (null: $border-width solid $border-color,
